Allow to watch replays while in game option
Fixes #1898